multi: add MintingBatch RPC
