# rpcserver.go
@@ -133,6 +133,10 @@ var (
 			Entity: "assets",
 			Action: "write",
 		}},
+		"/mintrpc.Mint/MintingBatches": {{
+			Entity: "assets",
+			Action: "read",
+		}},
 	}
 )
 
@@ -341,24 +345,28 @@ func (r *rpcServer) DebugLevel(ctx context.Context,
 func (r *rpcServer) MintAsset(ctx context.Context,
 	req *mintrpc.MintAssetRequest) (*mintrpc.MintAssetResponse, error) {
 
+	if req.Asset == nil {
+		return nil, fmt.Errorf("asset is missing")
+	}
+
 	// Using a specific group key implies disabling emission.
-	if req.EnableEmission && len(req.GroupKey) != 0 {
+	if req.EnableEmission && len(req.Asset.GroupKey) != 0 {
 		return nil, fmt.Errorf("must disable emission")
 	}
 
 	seedling := &tarogarden.Seedling{
-		AssetType:      asset.Type(req.AssetType),
-		AssetName:      req.Name,
-		Metadata:       req.MetaData,
-		Amount:         uint64(req.Amount),
+		AssetType:      asset.Type(req.Asset.AssetType),
+		AssetName:      req.Asset.Name,
+		Metadata:       req.Asset.MetaData,
+		Amount:         uint64(req.Asset.Amount),
 		EnableEmission: req.EnableEmission,
 		NoBatch:        req.SkipBatch,
 	}
 
 	// If a group key is provided, parse the provided group public key
 	// before creating the asset seedling.
-	if len(req.GroupKey) != 0 {
-		groupTweakedKey, err := btcec.ParsePubKey(req.GroupKey)
+	if len(req.Asset.GroupKey) != 0 {
+		groupTweakedKey, err := btcec.ParsePubKey(req.Asset.GroupKey)
 		if err != nil {
 			return nil, fmt.Errorf("invalid group key: %w", err)
 		}
